--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 
 set(SOURCES
-    src/main.c
-)
+    "src/main.c"
+    "src/fgb/cpu.c")
 
 add_executable(${PROJECT_NAME} ${SOURCES})
